# tabpfn-football-predictions

./: .gitignore  README.md  mlflow.db  optuna.db  pyproject.toml  rules.md  skills-lock.json  submit.py  tune_ensemble.py
cli/: submit.py  tournament_eval.py  tune_ensemble.py
data/: tournois_importance.csv
docs/: backlog.md
legacy/: README.md  baseline.py
notebooks/: error_analysis.py  explore_data.py
notebooks/__marimo__/session/: explore_data.py.json
tests/: conftest.py  test_backtest.py  test_baseline.py  test_data.py  test_elo.py  test_ensemble.py  test_evaluation.py  test_features.py  test_h2h.py  test_model.py  test_proba.py  test_team_form.py  test_tournament.py  test_tuning.py
tests/legacy/: test_baseline.py
training/: backtest.py  config.py  data.py  ensemble.py  evaluation.py  main.py  mlflow_io.py  model.py  proba.py  tournament.py  tuning.py
training/features/: __init__.py  elo.py  h2h.py  team_form.py
