[project]
name = "tabpfn-football-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabpfn-client",
    "pandas",
    "numpy",
    "scikit-learn",
    "mlflow>=3.14.0",
    "polars>=1.42.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "optuna>=4.9.0",
]

[dependency-groups]
dev = [
    "altair>=6.2.2",
    "marimo>=0.23.11",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
